--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title >Portfolio</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <a href="javascript:" id="return-to-top"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="javascript:" class="return-to-top"><i class="fa-solid fa-arrow-up"></i></a>
     
   </head>
   <body class="body">
@@ -87,7 +87,7 @@
                     </form>
                 </div>
                 <!-- said i created the website -->
-                <button id="mode"><i id="sun"class="fa-solid fa-moon"></i></button>
+                <button class="mode"><i id="sun"class="fa-solid fa-moon"></i></button>
                 <footer>Created by Nathaniel Brant</footer>
                 <!-- imports and link to use fonts,jquery and animates -->
                 <link
